--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -14,6 +14,7 @@
     "@prettypaper/gatsby-theme-docs": "^0.1.0",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.18.8",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
