--- a/packages/gatsby-theme-docs/package.json
+++ b/packages/gatsby-theme-docs/package.json
@@ -19,6 +19,7 @@
     "@modulz/radix": "^0.0.1-beta.6",
     "@modulz/radix-icons": "^0.8.7",
     "@modulz/radix-system": "^0.0.1-alpha.10",
+    "@theme-ui/components": "^0.3.1",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby-plugin-catch-links": "^2.1.21",
     "gatsby-plugin-mdx": "^1.0.62",
@@ -26,15 +27,19 @@
     "gatsby-plugin-nprogress": "^2.1.17",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.42",
     "github-slugger": "^1.2.1",
+    "i": "^0.3.6",
+    "npm": "^6.14.2",
     "prism-react-renderer": "^1.0.2",
     "react-helmet": "^5.2.1",
     "react-live": "^2.2.2",
     "remark-autolink-headings": "^5.2.1",
     "remark-slug": "^5.1.2",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "theme-ui": "^0.3.1"
   },
   "peerDependencies": {
     "gatsby": "^2.18.11",
