--- a/packages/gatsby-theme-system-docs/package.json
+++ b/packages/gatsby-theme-system-docs/package.json
@@ -19,6 +19,7 @@
     "@modulz/radix": "^0.0.1-beta.6",
     "@modulz/radix-icons": "^0.8.7",
     "@modulz/radix-system": "^0.0.1-alpha.10",
+    "@reach/disclosure": "^0.9.0",
     "@theme-ui/components": "^0.3.1",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby-plugin-catch-links": "^2.1.21",
@@ -35,6 +36,7 @@
     "i": "^0.3.6",
     "npm": "^6.14.2",
     "prism-react-renderer": "^1.0.2",
+    "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
     "react-live": "^2.2.2",
     "remark-autolink-headings": "^5.2.1",
