--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -9,14 +9,10 @@
     "build": "gatsby build"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "gatsby-theme-system-docs": "^0.1.0",
-    "emotion-theming": "^10.0.27",
     "gatsby": "^2.18.8",
+    "gatsby-theme-system-docs": "^0.1.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/styled-components": "^4.4.1"
