--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -14,7 +14,5 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
-  "devDependencies": {
-    "@types/styled-components": "^4.4.1"
-  }
+  "devDependencies": {}
 }
