--- a/packages/example/src/gatsby-theme-system-docs/nav.yml
+++ b/packages/example/src/gatsby-theme-system-docs/nav.yml
@@ -5,11 +5,9 @@
   pages:
     - title: About
       url: /
-    - title: Getting Started
-      url: /getting-started
+    - title: Table
+      url: /table
 - categorie: Components
   pages:
-    - title: Button
-      url: /button
     - title: Alert
       url: /alert
